objects/Call_Report__c.object
<CustomObject>
    <description>This object tracks the Call Plan and Call Report</description>
    <fields>
        <fullName>Accompanied_By_Names__c</fullName>
        <formula>IF( Accompanied_by_CEM_MS__c &amp;&amp; NOT(ISBLANK( Accompanied_Executive_Name__c )) , &quot;CEM/MS: &quot; &amp; Updated_by_CEM_MS__c &amp; &quot; / Executive: &quot; &amp; Accompanied_Executive_Name__c , 
IF(Accompanied_by_CEM_MS__c &amp;&amp; ISBLANK(Accompanied_by_Executive__c), &quot;CEM/MS: &quot; &amp; Updated_by_CEM_MS__c 
,&quot;CEM/MS: &quot; &amp; Updated_by_CEM_MS__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accompanied By Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompanied_By__c</fullName>
        <formula>IF ( Accompanied_by_CEM_MS__c = TRUE, &quot;CEM/MS&quot;, &quot;Non Accompanied&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accompanied By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompanied_Executive_Name__c</fullName>
        <label>Accompanied Executive Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompanied_by_CEM_MS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanied by CEM/MS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accompanied_by_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompanied by Executive</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Executive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans_Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquantainceship_CEM__c</fullName>
        <label>Acquantainceship</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acquantainceship_Score__c</fullName>
        <formula>VALUE(TEXT( Acquantainceship_CEM__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquaintanceship Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Visit_Date__c</fullName>
        <defaultValue>IF(CONTAINS($RecordType.DeveloperName,&quot;CallReport&quot;),TODAY(),NULL)</defaultValue>
        <inlineHelpText>ห้ามเกินกว่าวันปัจจุบัน</inlineHelpText>
        <label>Actual Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Visit__c</fullName>
        <formula>If ( ISBLANK(Actual_Visit_Date__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Code_Description__c</fullName>
        <formula>Business_Code__r.Business_Code_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code_Formula__c</fullName>
        <formula>Business_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Code</label>
        <referenceTo>Business_Code__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Knowledge_CEM__c</fullName>
        <label>Business Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Knowledge_Score__c</fullName>
        <formula>VALUE(TEXT(Business_Knowledge_CEM__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Knowledge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEM_MS_Contact_Information__c</fullName>
        <label>CEM/MS Contact Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Plans / Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Port__c</fullName>
        <formula>IF (  ISNULL(Name), 0 ,1)</formula>
        <label>Call_Plan_Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_No_Plan__c</fullName>
        <formula>CASE ( RecordType.DeveloperName,
&quot;ClosedCancelledCallReportNoPlan&quot;, 1,
&quot;Closed_Contacted_Call_Report_No_Plan_Editable&quot;, 1, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report No Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_with_Plan__c</fullName>
        <formula>CASE ( RecordType.DeveloperName,
&quot;ClosedCancelledCallReport&quot;, 1,
&quot;Closed_Contacted_Call_Report_Editable&quot;, 1, 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report with Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Result_Activity__c</fullName>
        <formula>IF( Offer_Credit_Product__c ,&quot;Offer Credit Product&quot;, 
IF( Collect_Documents__c ,&quot;Collect Documents&quot;, 
IF( Negotiation__c , &quot;Negotiation&quot;, 
IF( Pain__c , &quot;Pain (TF/LI/FX)&quot;, 
IF( Servicing__c ,&quot;Servicing&quot;, 
IF( Customer_Insight__c ,&quot;Customer Insight&quot;, 
IF( Non_Credit__c , &quot;Non-Credit&quot;, 
IF( No_Change__c , &quot;No Change&quot;, 
null))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Result Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Call_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want to cancel Call Plan ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Borrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collect_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Call__c</fullName>
        <formula>IF  (ISPICKVAL( Contact_Channel__c , &quot;Phone Call&quot;),1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Channel__c</fullName>
        <label>Contact Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_F2F__c</fullName>
        <formula>IF  (ISPICKVAL( Contact_Channel__c , &quot;Face to Face&quot;),1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_F2F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Firstname__c</fullName>
        <inlineHelpText>สำหรับสร้างบุคคลผู้ติดต่อใหม่</inlineHelpText>
        <label>Contact Firstname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lastname__c</fullName>
        <inlineHelpText>สำหรับสร้างบุคคลผู้ติดต่อใหม่</inlineHelpText>
        <label>Contact Lastname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <inlineHelpText>สำหรับสร้างบุคคลผู้ติดต่อใหม่</inlineHelpText>
        <label>Contact Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>เลือกบุคคลผู้ติดต่อที่มีอยู่แล้ว</inlineHelpText>
        <label>Existing Contact Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CIS_ID__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Plans / Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacted_by_Current_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted by Current Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Plan_Last_Week__c</fullName>
        <formula>IF(DATEVALUE(Plan_Date__c) &gt;= (TODAY()-7-CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 0, 6, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, NULL)) &amp;&amp; DATEVALUE(Plan_Date__c) &lt; (TODAY()-1-CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 0, 6, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, NULL)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Plan Last Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateByMe__c</fullName>
        <formula>IF(CreatedById = $User.Id , &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreateByMe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByMyArea__c</fullName>
        <formula>IF (   CreatedBy.AH_RC_Code__c  =   $User.RC_Code__c  , 1 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyArea</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMyNetwork__c</fullName>
        <formula>IF (  CreatedBy.NH_RC_Code__c =   $User.RC_Code__c  , 1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyNetwork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMyTeam__c</fullName>
        <formula>IF (   CreatedBy.RC_Code__c =  $User.RC_Code__c , 1 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyTeam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedTeam__c</fullName>
        <formula>CreatedBy.Team_Name__c</formula>
        <label>CreatedTeam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(CreatedBy.Area_Name__c, &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Area_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator Area Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans_Call_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creator_FullName__c</fullName>
        <formula>CreatedBy.FirstName&amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CreatedBy.Network_Name__c, &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NetworkName__c</fullName>
        <formula>CreatedBy.Network_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator NetworkName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Team_Name__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(CreatedBy.Team_Name__c, &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Non_Credit__c</fullName>
        <formula>IF( Collect_Documents__c,&quot;Non-Credit&quot;, 
IF( Offer_Credit_Product__c ,&quot;Credit&quot;, 
IF( Negotiation__c , &quot;Non-Credit&quot;,
IF( Servicing__c ,&quot;Non-Credit&quot;,
IF( Non_Credit__c, &quot;Non-Credit&quot;,
IF( No_Change__c , &quot;Non-Credit&quot;,
&quot;Others&quot;))))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit / Non-Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentOwnerIsMe__c</fullName>
        <formula>IF(CIS_ID__r.Owner.Employee_ID__c = $User.Employee_ID__c ,&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentOwnerIsMe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports (Current AH Name)</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports (Current NH Name)</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Extension</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports (Current Team Name)</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Important_Note__c</fullName>
        <label>Important Note of this Visit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>CIS_ID__r.Name_Surname_TH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owner_2__c</fullName>
        <formula>CIS_ID__r.Owner.FirstName &amp; &quot; &quot; &amp;  CIS_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owner_Release_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer Owner Release Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <formula>CIS_ID__r.Owner.FirstName &amp; &quot; &quot; &amp;  CIS_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Report__c</fullName>
        <formula>IF ( ISBLANK(Plan_Date__c),  Actual_Visit_Date__c,  DATEVALUE(Plan_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Credit_Amount__c</fullName>
        <label>Expected Credit Amount (Baht)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Score_CEM__c</fullName>
        <label>Final Score</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Score_Score__c</fullName>
        <formula>VALUE(TEXT( Final_Score_CEM__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Opp_or_not__c</fullName>
        <formula>IF ( Number_of_Opp__c &gt; 0, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Opp or not</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of UW Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>UW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Plans_Call_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsSLACount__c</fullName>
        <formula>ISPICKVAL(Contact_Channel__c,&apos;Face to Face&apos;) &amp;&amp; (ISPICKVAL(Offer_Interest__c,&apos;Interest and can apply&apos;) || ISPICKVAL(Offer_Interest__c,&apos;Interest with condition&apos;))</formula>
        <label>IsSLACount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Call_Report_This_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Call Report This Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_me_CEM_MS__c</fullName>
        <formula>IF (Updated_by_CEM_MS_ID__c = $User.Id &amp;&amp;
Accompanied_by_CEM_MS__c, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is me (CEM/MS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Date__c</fullName>
        <formula>CIS_ID__r.Last_Visited_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Borrower__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Main Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>My_Area__c</fullName>
        <formula>If ( CIS_ID__r.AH_RC_Code__c  = $User.RC_Code__c, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Network__c</fullName>
        <formula>If ( CIS_ID__r.NH_RC_Code__c = $User.RC_Code__c, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>CIS_ID__r.My_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negotiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non - Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Financial_Provides_CEM__c</fullName>
        <label>Non - Financial Provides</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Financial_Provides_Score__c</fullName>
        <formula>VALUE(TEXT( Non_Financial_Provides_CEM__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non - Financial Provides Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Opp__c</fullName>
        <label>Number of Opp</label>
        <summaryForeignKey>Call_Report_Opportunity__c.Call_Plan_Call_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reschedule__c</fullName>
        <label>Number of Reschedule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Credit_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Credit Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Interest__c</fullName>
        <label>Offer Interest</label>
        <picklist>
            <controllingField>Offer_Credit_Product__c</controllingField>
            <picklistValues>
                <fullName>Interest and can apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest with condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested with condition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Comments_CEM__c</fullName>
        <label>Other Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Details_CEM__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pain (TF/LI/FX)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Existing Phone Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Plan_Amount__c</fullName>
        <label>Plan Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>Plan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Plan_Last_Week__c</fullName>
        <formula>IF(DATEVALUE(Plan_Date__c) &gt;= (TODAY()-7-CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 0, 6, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, NULL)) &amp;&amp; DATEVALUE(Plan_Date__c) &lt; (TODAY()-CASE(MOD(TODAY() - DATE(1900, 1, 7), 7), 0, 6, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, NULL)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Last Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>If ( ISBLANK(Plan_Date__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Pool_Formula__c</fullName>
        <formula>CIS_ID__r.Port_Pool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port / Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <label>Port / Pool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Call_Plan_Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Call Plan / Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Call Plans / Call Reports</relationshipLabel>
        <relationshipName>Call_Plans_Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Call_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Call Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Explanation_CEM__c</fullName>
        <label>Product Explanation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Explanation_Score__c</fullName>
        <formula>VALUE(TEXT( Product_Explanation_CEM__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Explanation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>